test_scores/negative_dimers/features/O76094.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O76094.pkl.xz